tools/tests/errors/surf_cls_09.ki
# using self in a plain (non-method) function is an undefined-name error
var f = Function():
    return self.x
discard f()
